; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/async/extr_sqlite3async.c_incrOpenFileCount.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/async/extr_sqlite3async.c_incrOpenFileCount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@ASYNC_MUTEX_QUEUE = common dso_local global i32 0, align 4
@async = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@SQLITE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @incrOpenFileCount to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @incrOpenFileCount() #0 {
  %1 = load i32, i32* @ASYNC_MUTEX_QUEUE, align 4
  %2 = call i32 @async_mutex_enter(i32 %1)
  %3 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @async, i32 0, i32 0), align 8
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @SQLITE_OK, align 4
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @async, i32 0, i32 1), align 8
  br label %7

7:                                                ; preds = %5, %0
  %8 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @async, i32 0, i32 0), align 8
  %9 = add nsw i64 %8, 1
  store i64 %9, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @async, i32 0, i32 0), align 8
  %10 = load i32, i32* @ASYNC_MUTEX_QUEUE, align 4
  %11 = call i32 @async_mutex_leave(i32 %10)
  ret void
}

declare dso_local i32 @async_mutex_enter(i32) #1

declare dso_local i32 @async_mutex_leave(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
